tests/regression/error/hw4_error06.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],
     stmts=[ST_EXP {exp=EXP_BINARY {lft=EXP_NUM 3,opr=BOP_MOD,rht=EXP_NONE}}]}
  : program
;
